--- a/lib/assets/summernote-no-plugins.html
+++ b/lib/assets/summernote-no-plugins.html
@@ -17,16 +17,24 @@
 <!--summernoteScripts-->
 <!--minor styling to improve editor design-->
 <style>
-  body {
-      display: block;
-      margin: 0px;
-  }
-  .note-editor.note-airframe, .note-editor.note-frame {
-      border: 0px solid #a9a9a9;
-  }
-  .note-frame {
-      border-radius: 0px;
-  }
+    @media print {
+         @page {
+             margin-top: 0;
+             margin-bottom: 0;
+         }
+        body{
+            visibility: hidden !important ;
+        }
+
+        #print-div {
+            visibility: visible !important;
+            display: block !important;
+            position: absolute !important;
+            height: 100% !important;
+            left: 0 !important;
+            top: 0 !important;
+        }
+    }
 </style>
 </body>
 </html>
