--- a/lib/assets/summernote-no-plugins.html
+++ b/lib/assets/summernote-no-plugins.html
@@ -12,6 +12,7 @@
     <!--darkCSS-->
 </head>
 <body>
+<div id="print-div" style="display:none;"></div>
 <div id="summernote-2"></div>
 <!--headString-->
 <!--summernoteScripts-->
